--- a/src/app/feature/components/location-card/location-card.component.html
+++ b/src/app/feature/components/location-card/location-card.component.html
@@ -9,5 +9,5 @@
     <mat-card-title>{{ data.name }}</mat-card-title>
     <mat-card-subtitle>{{ type[data.type] }}</mat-card-subtitle>
   </mat-card-header>
-  <div class="map" leaflet [leafletOptions]="options"></div>
+  <div class="card-map" leaflet [leafletOptions]="options"></div>
 </mat-card>
