--- a/src/app/feature/components/location-card/location-card.component.scss
+++ b/src/app/feature/components/location-card/location-card.component.scss
@@ -1,5 +1,9 @@
 :host {
-  .map {
+  mat-card {
+    border: 1px solid lightgray;
+    box-shadow: none;
+  }
+  .card-map {
     height: 200px;
   }
 }
